chore: update cesium version

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
 
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
-  <script src="https://cesiumjs.org/releases/1.52/Build/Cesium/Cesium.js"></script>
-  <link href="https://cesiumjs.org/releases/1.52/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+  <script src="https://cesium.com/downloads/cesiumjs/releases/1.81/Build/Cesium/Cesium.js"></script>
+  <link href="https://cesium.com/downloads/cesiumjs/releases/1.81/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
 </head>
 <body>
 <app-root></app-root>
